Cloudformation/base-infra/cf-baseline-infra.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: This template creates a default VPC, Internet-gateway, NAT instance, elastic ip, public subnets, private subnets, route tables, security group.  
Parameters:
  VPCName:
    Type: String
    Description: Please enter VPC name "vpc-[projectapplication]-[component or function]"
    Default: vpc-safran-internal-shared

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.0.0.0/16

  PublicSubnet1Name:
    Description: Please enter the public subnet name
    Type: String
    Default: sub-pub-safran-internal-shared-az1-001

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet
    Type: String
    Default: 10.0.0.0/24

  PublicSubnet2Name:
    Description: Please enter the public subnet name
    Type: String
    Default: sub-pub-safran-internal-shared-az2-002

  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet
    Type: String
    Default: 10.0.1.0/24

  PrivateSubnet1Name:
    Description: Please enter the private subnet name
    Type: String
    Default: sub-prv-safran-internal-shared-az1-001

  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet
    Type: String
    Default: 10.0.2.0/24
  
  PrivateSubnet2Name:
    Description: Please enter the private subnet name
    Type: String
    Default: sub-prv-safran-internal-shared-az2-002

  PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet
    Type: String
    Default: 10.0.3.0/24

  PrivateHostedZoneDomain:
    Description: Please enter private hosted zone name
    Type: String
    Default: safran.internal

  PublicRouteTableName1:  
    Description: Please enter 1st public route table name 
    Type: String
    Default: rtb-pub-safran-internal-shared-001

  PublicRouteTableName2:  
    Description: Please enter 2nd public route table name 
    Type: String
    Default: rtb-pub-safran-internal-shared-002

  PrivateRouteTableName1:  
    Description: Please enter 1st private route table name
    Type: String
    Default: rtb-prv-safran-internal-shared-001

  PrivateRouteTableName2:  
    Description: Please enter 2nd private route table name
    Type: String
    Default: rtb-prv-safran-internal-shared-002

  NatInstanceName:
    Type: String
    Description: Please enter NAT Instance name"
    Default: safran-internal-shared-nat-instance

  NatInstanceKeyPairName:
    Type: String
    Description: Please enter NAT key pair name"
    Default: safran-internal-devops-keypair

  NATInstanceAMI:
    Description: AMI ID for NAT instance (amzn-ami-vpc-nat).
    Type: 'AWS::EC2::Image::Id'

  NATSSMRoleName:
    Type: String
    Description: Please enter NAT SSM role name"
    Default: rol-safran-internal-shared-nat-instance

  EncryptionKeyAliasName:
    Type: String
    Description: Please enter Alias Name for the Customer Managed key.
    Default: "safran-internal-shared-cmk"

  QburstPrefixListName:
    Type: String
    Description: Please enter Prefixlist name"
    Default: pfx-safran-internal-shared-qburst

  ComplianceTagValue:
    Type: String
    Description: Tag to identify safran compliance framework.
    AllowedValues: [NONE,HIPA,GDPR,PCI-DSS]
    Default: NONE
  
Resources:
  #Create VPC
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common
  
  #Create InternetGateeway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: safran-internal-igw
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common 
      
  #Atttach InternetGateeway to VPC  
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  
  #Create Public Subnets
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Ref PublicSubnet1Name
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common 
                  
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Ref PublicSubnet2Name
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common 

  #Create Private Subnets
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Ref PrivateSubnet1Name
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common 
                  
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: !Ref PrivateSubnet2Name
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common 

  #Create Private Hosted Zone
  PrivateHostedZone:
    Type: 'AWS::Route53::HostedZone'
    Properties:
      Name: !Sub '${AWS::Region}.${PrivateHostedZoneDomain}'
      VPCs:
        - VPCId: !Ref VPC
          VPCRegion: !Ref 'AWS::Region'
      HostedZoneTags:
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common

  #Create NAT SG
  NatSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for NAT instance
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourcePrefixListId: !Ref QBurstPrefixList
          Description: QBrust IP address on port 8080
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourcePrefixListId: !Ref QBurstPrefixList
          Description: QBrust IP address on port 8080
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: !Ref PrivateSubnet1CIDR
          Description: Private Subnet 1 instances
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: !Ref PrivateSubnet2CIDR
          Description: Private Subnet 2 instances

      Tags:
        - Key: Name
          Value: NATSecurityGroup
    
  #Create NAT Instance
  NatInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      IamInstanceProfile: !Ref NATInstanceProfile
      SecurityGroupIds:
        - !Ref NatSecurityGroup
      KeyName: !Ref NatInstanceKeyPairName
      ImageId: !Ref NATInstanceAMI # Specify an AMI that supports NAT instance
      SubnetId: !Ref PublicSubnet1
      SourceDestCheck: false  # Disable source/destination check
      Tags:
        - Key: Name
          Value: !Ref NatInstanceName
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common

  #Create NAT Instance EIP
  NatInstanceEIP:
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    DeletionPolicy: Retain
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: safran-internal-nat-eip
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common

  #Attach EIP to NAT Instance
  NatEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref NatInstance
      EIP: !Ref NatInstanceEIP

  #Create NAT SSM Role
  NATSSMRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: !Ref NATSSMRoleName
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: 'Allow'
            Principal:
              Service: 'ec2.amazonaws.com'
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore'

  #Create instance profile for the NATSSMRole
  NATInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Roles:
        - !Ref NATSSMRole
      InstanceProfileName: !Ref NATSSMRoleName

  #Create Route Table for Public Subnets
  PublicRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PublicRouteTableName1
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common 

  PublicRouteTable1Entry:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTable1SubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable1

  PublicRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PublicRouteTableName2
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common  

  PublicRouteTable2Entry:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTable2SubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable2

  #Create Private Route Table
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PrivateRouteTableName1
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common
  
  PrivateRouteTable1Entry:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      InstanceId: !Ref NatInstance

  PrivateRouteTable1SubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1


  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref PrivateRouteTableName2
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common
  
  PrivateRouteTable2Entry:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      InstanceId: !Ref NatInstance

  PrivateRouteTable2SubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

  #Create Customer Managed Key
  EncryptionKey:
    Type: AWS::KMS::Key
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Properties:
      Description: "Customer Managed Key in AWS KMS service to encrypt EBS volumes"
      Enabled: true
      KeyPolicy:
        Version: "2012-10-17"
        Id: "pol-cmk-ebs-encryption"
        Statement:
          - Sid: "Enable IAM User Permissions"
            Effect: "Allow"
            Principal:
              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
            Action:
              - "kms:*"
            Resource: "*"
          - Sid: "Allow use of the key"
            Effect: "Allow"
            Principal:
              AWS: 
                - !Sub "arn:aws:iam::${AWS::AccountId}:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling"
            Action:
              - "kms:Encrypt"
              - "kms:Decrypt"
              - "kms:ReEncrypt*"
              - "kms:GenerateDataKey*"
              - "kms:DescribeKey"
            Resource: "*"
          - Sid: "Allow attachment of persistent resources for service role"
            Effect: "Allow"
            Principal:
              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling"
            Action:
              - "kms:CreateGrant"
              - "kms:ListGrants"
              - "kms:RevokeGrant"
            Resource: "*"
            Condition:
              Bool:
                kms:GrantIsForAWSResource: true
      Tags:
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common

  EncryptionKeyAlias:
    Type: AWS::KMS::Alias
    Properties:
      AliasName: !Sub 
        - "alias/${AliasName}"
        - AliasName: !Ref EncryptionKeyAliasName
      TargetKeyId: !Ref EncryptionKey     


  #Create Prefixlist for IP whitelisting
  QBurstPrefixList:
      Type: AWS::EC2::PrefixList
      Properties:
        PrefixListName: !Ref QburstPrefixListName
        AddressFamily: "IPv4"
        MaxEntries: 20
        Entries:
          - Cidr: "117.239.250.9/32"
            Description: "QBurst Calicut IP 1"
          - Cidr: "111.93.116.30/32"
            Description: "QBurst Calicut IP 2"
          - Cidr: "118.185.82.83/32"
            Description: "QBurst Kochi Lulu IP 1"
          - Cidr: "115.248.7.141/32"
            Description: "QBurst Kochi Lulu IP 2"
          - Cidr: "61.12.76.170/32"
            Description: "QBurst Kochi Lulu IP 3"
          - Cidr: "14.141.33.202/32"
            Description: "QBurst Kochi Lulu IP 4"
          - Cidr: "103.156.209.138/32"
            Description: "QBurst Kochi Lulu IP 5"
          - Cidr: "14.194.85.198/32"
            Description: "QBurst TVM Safran ODC IP 1"
          - Cidr: "103.121.27.174/32"
            Description: "QBurst TVM Safran ODC IP 2"
          - Cidr: "49.249.37.182/32"
            Description: "QBurst Kochi WTC IP 1"
          - Cidr: "103.135.95.70/32"
            Description: "QBurst Kochi WTC IP 2"
          - Cidr: "122.15.225.249/32"
            Description: "QBurst Banglore IP 1"
          - Cidr: "14.98.205.138/32"
            Description: "QBurst Banglore IP 2"
          - Cidr: "112.133.206.230/32"
            Description: "QBurst Banglore IP 3"
          - Cidr: "10.212.134.5/32"
            Description: "QBurst Banglore IP 4"
          - Cidr: "10.212.134.10/32"
            Description: "QBurst Banglore IP 5"
          - Cidr: "35.154.142.219/32"
            Description: "code.qburst.com"
          - Cidr: "104.192.136.0/21"
            Description: "bitbucket.org"
          
        Tags:
        - Key: "Name"
          Value: !Ref QburstPrefixListName
        - Key: compliance:framework
          Value: !Ref ComplianceTagValue
        - Key: cost-allocation:department
          Value: DEVOPS
        - Key: cost-allocation:application
          Value: common
